// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricCard Component:  should render correctly with all props 1`] = `
<div
  className="MetricCard"
>
  <Panel
    className="Panel"
    p="500"
    primary={true}
  >
    <Panel.Section>
      <h1
        className="Value"
      >
        Card Value
      </h1>
      <h6
        className="Label"
      >
        Card Label
         
        <Tooltip
          content="Tooltip Content"
          dark={true}
          horizontalOffset="-1.1rem"
        >
          <InfoOutline />
        </Tooltip>
      </h6>
    </Panel.Section>
  </Panel>
</div>
`;

exports[`MetricCard Component:  should render without tooltip 1`] = `
<div
  className="MetricCard"
>
  <Panel
    className="Panel"
    p="500"
    primary={true}
  >
    <Panel.Section>
      <h1
        className="Value"
      >
        Card Value
      </h1>
      <h6
        className="Label"
      >
        Card Label
         
      </h6>
    </Panel.Section>
  </Panel>
</div>
`;
